--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
+    "@vercel/speed-insights": "^1.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
