--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lucide-react": "^0.501.0",
     "next": "15.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
     "@vercel/speed-insights": "^1.2.0"
   },
   "devDependencies": {
